// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a <Input /> component 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  color: #404040;
  min-height: 36px;
  font-family: inherit;
  line-height: 48px;
  font-size: 18px;
  background-color: transparent;
  border-radius: 2px;
  border: 1px solid #d6d6d6;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  width: 100%;
  margin: 0px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.c0::-webkit-input-placeholder {
  color: #d6d6d6;
}

.c0::-moz-placeholder {
  color: #d6d6d6;
}

.c0:-ms-input-placeholder {
  color: #d6d6d6;
}

.c0::placeholder {
  color: #d6d6d6;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: none;
  z-index: 1;
  box-shadow: 0 0 0 2px rgba(30,144,255,0.75);
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

<input
  className="c0"
  id="renders"
/>
`;

exports[`Input should render with custom spacing 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  vertical-align: middle;
  max-width: 32rem;
  color: #404040;
  min-height: 36px;
  font-family: inherit;
  line-height: 48px;
  font-size: 18px;
  background-color: transparent;
  border-radius: 2px;
  border: 1px solid #d6d6d6;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  width: 100%;
  margin: 32px;
  padding: 32px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.c0::-webkit-input-placeholder {
  color: #d6d6d6;
}

.c0::-moz-placeholder {
  color: #d6d6d6;
}

.c0:-ms-input-placeholder {
  color: #d6d6d6;
}

.c0::placeholder {
  color: #d6d6d6;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: none;
  z-index: 1;
  box-shadow: 0 0 0 2px rgba(30,144,255,0.75);
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

<input
  className="c0"
  id="space"
/>
`;
